# FactorTester-Client

./: .gitignore  README.md
tools/cli/: __init__.py  app.py  capability_projection.py  client.py  client_agent_flow.py  client_base.py  client_factor_library.py  client_protocol.py  client_research.py  client_research_graph.py  field_help.py  field_store.py  http.py  protocol.py  pyproject.toml  research_metrics.py  state.py  table.py
tools/cli/agent-harness/: FACTORTESTER_RESEARCH.md  pyproject.toml
tools/cli/agent-harness/cli_anything/factortester_research/: README.md  __init__.py  __main__.py  factortester_research_cli.py
tools/cli/agent-harness/cli_anything/factortester_research/commands/: __init__.py  audit.py  common.py  cycle.py  evidence.py  external.py  graph.py  operations.py  report.py  research.py
tools/cli/agent-harness/cli_anything/factortester_research/core/: __init__.py  backend_evidence.py  capabilities.py  capability_bindings.py  capability_predicates.py  capability_registry.py  capability_resolution.py  capability_sources.py  cycle.py  draft_graph.py  draft_graph_cycle.py  draft_graph_edges.py  draft_graph_nodes.py  evidence.py  external_factor.py  graph.py  graph_protocol.py  observed_graph.py  plan.py  replay.py  server_guards.py  service.py  session.py  slices.py  (+1 more)
tools/cli/commands/: __init__.py  agent.py  agent_flow.py  agent_resume.py  auth.py  client_adapter.py  client_profile.py  client_release.py  navigation.py  protocol.py  research.py  research_graph.py  settings.py
tools/cli/core/: __init__.py  context.py  display.py  errors.py
tools/cli/docs/: factor-research-cli.md
tools/cli/modules/: __init__.py  keys.py  registry.py  research_metadata.py
tools/cli/modules/custom_factors/: __init__.py  controller.py
tools/cli/modules/products/: __init__.py  controller.py
tools/cli/release/: __init__.py  app_archive.py  artifacts.py  contracts.py  health.py  local_profile.py  local_profile_contracts.py  locations.py  materialize.py  profile.py  signature.py  storage.py  transaction.py  trusted-release-public.pem  workspace_inventory.py  workspace_migration.py
tools/cli/release/adapters/: __init__.py  archive.py  contracts.py  execution.py  manager.py  profile_binding.py
(+112 files in other folders)
